traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:40: error: ')' expected but '}' found.
    } 
    ^