traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {

droite()
var cpt:Int=0
ecritMessage(cpt)
  def test:Boolean = {
    var t1:Boolean=false
    var t2:Boolean=false
    if (getY()==getMondeHauteur()-1) {t1=true}
    if (getX()==getMondeLargeur()-1) {t2=true}
    return t1&&t2
   
  }
    
def doupas:Boolean = {
  return (getY()%2==0)
}

while (!test) {
  while (!estFaceMur) {
    if ((doupas) && (!estFaceMur)) {
      setPos(getX()+1,getY())
      cpt=cpt+1
      ecritMessage(cpt)
      if (estFaceMur && doupas) {
        setPos(getX(),getY()+1)
        cpt=cpt+1
        ecritMessage(cpt)
      }
    }

    if (!estDosMur && !doupas) {
      setPos(getX()-1,getY())
      cpt=cpt+1
      ecritMessage(cpt)
			if (estDosMur && !doupas && (getY()!=6&&getX()!=6) {
        setPos(getX(),getY()+1)
        cpt=cpt+1
        ecritMessage(cpt)
    }
    } 
  }
	
}
}

  